--- a/myapp004_frontend_shop/package.json
+++ b/myapp004_frontend_shop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp002_todolist",
+  "name": "myapp004_frontend_shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,13 +7,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://127.0.0.1:8090"
+  }
 }
